# dbtopo-bricks

./: .gitignore  CLAUDE.md  README.md  TODO.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
SPECS/: SPEC.md
docs/img/: process.mmd
notebooks/: 00_setup_catalog.py  test_parallel_ingestion.py
scripts/: extract_bad_datetime_row.py
src/dbtopo/: __init__.py  cli.py  config.py  dedup.py  downloader.py  extractor.py  gpkg_reader.py  metadata.py  schema.py  task_values.py  transformer.py  validator.py  writer.py
tests/: conftest.py  test_config.py  test_dedup.py  test_downloader.py  test_extractor.py  test_gpkg_reader.py  test_metadata.py  test_parse_departments.py  test_schema.py  test_task_values.py  test_transformer.py  test_writer.py  test_writer_spark.py
tests/fixtures/: test_bad_datetime.gpkg
